Prevent jumpy layout sliders
* On page load a vertical list of all layouts would be visible for
  a short time before slick has initialized. We now hide the container
  with visibility:hidden until slick has fully initialized.
  Visibility:hidden still allows slick to properly calculate dimensions,
  unlike display:none;
* Same fix for the big layout pickers (Add content > Pick layout)

--- a/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-block.less
+++ b/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-block.less
@@ -256,9 +256,14 @@ perplex-content-block {
     /* layout switch */
     &__layout {
         display: block;
+        visibility: hidden;
         border-right: 1px solid @umbraco-border;
         position: relative;
         width: 16rem;
+
+        &.is-initialized {
+            visibility: visible;
+        }
 
         &__list {
             list-style: none;
