--- a/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-picker.less
+++ b/src/Perplex.ContentBlocks/App_Plugins/Perplex.ContentBlocks/styles/perplex.content-blocks-picker.less
@@ -162,6 +162,11 @@
 .p-pick-layouts {
 
     &__list {
+        visibility: hidden;
+
+        &.is-initialized {
+            visibility: visible;
+        }
 
         .slick-arrow {
             font-size: 0;
